--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,11 @@
   NODE_VERSION = "16"
 
 [[redirects]]
+  from = "/app.js"
+  to = "/app.js"
+  status = 200
+
+[[redirects]]
   from = "/.netlify/functions/*"
   to = "/.netlify/functions/:splat"
   status = 200
@@ -16,6 +21,13 @@
   to = "/index.html"
   status = 200
   force = true
+
+[[headers]]
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type, Authorization"
 
 [dev]
   publish = "static"
