feat: Improve assistant reliability - Add robust error handling, connection monitoring, rate limiting, session management, and better state management

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,10 @@ openai
 termcolor
 websockets
 python-multipart
-httpx 
+httpx
+pydantic
+aiohttp
+asyncio
+tenacity
+python-jose[cryptography]
+passlib[bcrypt] 
